# Inquiro-legacy

./: .gitignore  Makefile  README.md  bun.lockb  docker-compose.yml  package.json
.husky/: commit-msg  pre-commit
api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  makefile  pyproject.toml
api/app/: lifecycle.py  main.py
api/app/configs/: __init__.py  firebase.py  settings.py
api/app/database/: __init__.py  port.py
api/app/database/options/: postgres.py
api/app/dependencies/: auth.py
api/app/modules/: __init__.py
api/app/modules/chat/: dto.py  router.py
api/app/modules/chat/message/: __init__.py  dto.py  router.py
api/app/modules/dashboard/: router.py
api/app/modules/datasource/: dto.py  router.py
api/app/modules/inference/: dto.py  router.py
api/app/modules/inference/sql/: dto.py  router.py
api/app/modules/snippet/: router.py
api/app/schemas/: openapi.json
api/app/scripts/: __init__.py  generate_openapi_schema.py
api/app/utils/: __init__.py  types.py
api/app/utils/llm/: __init__.py
api/app/utils/llm/models/: __init__.py  codellama_14b.py  codellama_15b.py  codellama_34b.py  gpt_35_turbo.py  gpt_4.py
api/app/utils/openapi/: __init__.py  generate_schema.py
api/app/utils/sql_generation/: __init__.py  abstract_generator.py
api/docs/: bruno.json
api/docs/chat/: Create chat.bru  Get all chats.bru  Update chat.bru
api/docs/datasources/: Create datasource.bru  Get all datasources.bru
api/docs/inference/: Generate SQL.bru
api/docs/message/: Create message.bru  Get messages.bru
api/prisma/: schema.prisma
(+121 files in other folders)
