[tool.poetry]
name = "Inquiro"
version = "0.1.0"
description = "Backend APIs for Inquiro Text-to-SQL Application"
authors = ["tontan2545 <tontan2545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
pydantic-settings = "^2.0.3"
openai = "^0.28.1"
prisma = "^0.10.0"
itsdangerous = "^2.1.2"
fastapi-sso = "^0.7.2"
fastapi-nextauth-jwt = "^1.1.2"
firebase-admin = "^6.2.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
together = "^0.2.5"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.9.1"}
jupyter = "^1.0.0"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
py_version=311
profile = "black"
src_paths = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

